<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="1"
    tools:context="com.kit.ratanaktepi.androiddatabase.MainActivity">

    <TableRow>
        <TextView
            android:id="@+id/header"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:gravity="center_horizontal"
            android:textSize="@dimen/header"
            android:text="@string/header"
            android:layout_weight="1"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:text="@string/rollno"
            android:textSize="@dimen/label"
            android:layout_column="0" />
        <EditText
            android:id="@+id/rollno"
            android:layout_height="wrap_content"
            android:layout_column="1"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/label"
            android:layout_column="0" />
        <EditText
            android:id="@+id/name"
            android:layout_height="wrap_content"
            android:layout_column="1"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:text="@string/mark"
            android:textSize="@dimen/label"
            android:layout_column="0" />
        <EditText
            android:id="@+id/mark"
            android:layout_height="wrap_content"
            android:layout_column="1"/>
    </TableRow>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <Button
                android:id="@+id/add"
                android:text="@string/add"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/delete"
                android:text="@string/delete"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/modify"
                android:text="@string/modify"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/view"
                android:text="@string/view"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/viewall"
                android:text="@string/viewall"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/about"
                android:text="@string/about"
                android:layout_weight="1"/>
        </TableRow>

    </TableLayout>

</TableLayout>
